# codenavigator

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install-hook.ps1  install-hook.sh  pyproject.toml
.claude/skills/codenav-frontmatter-gen/: SKILL.md
.claude/skills/codenav-indexer/: SKILL.md
.githooks/: pre-commit
.github/workflows/: publish.yml  test.yml
Docs/: DOCUMENT_GUIDE.md  USAGE.md
Docs/CodeNavigator/: CodeNavigator-ADR-CATALOG.md  CodeNavigator-ARCHITECTURE.md  CodeNavigator-FC.md  CodeNavigator-FRONTMATTER.md  CodeNavigator-PRD.md
Docs/CodeNavigator/ADR/: CodeNavigator-ADR-001.md  CodeNavigator-ADR-002.md
Docs/CodeNavigator/FRD/: CodeNavigator-FRD-001.md  CodeNavigator-FRD-002.md  CodeNavigator-FRD-003.md  CodeNavigator-FRD-004.md
Docs/CodeNavigator/TASK/: CodeNavigator-TASK-001.md  CodeNavigator-TASK-002.md  CodeNavigator-TASK-003.md
Docs/_templates/: ADR-TEMPLATE.md  ARCHITECTURE-TEMPLATE.md  CLAUDE-TEMPLATE.md  DDD_ARCHITECTURE_RULES.md  FC-TEMPLATE.md  FRD-TEMPLATE.md  OBJECT_ORIENTED_DESIGN_RULES.md  PRD-TEMPLATE.md  README-TEMPLATE.md  UI_GUIDE-TEMPLATE.md
Docs/_templates/App/: APP-PRD-TEMPLATE.md
Docs/_templates/App/FRD/: APP-FRD-001-TEMPLATE.md
Docs/_templates/App/TASK/: APP-TASK-001-TEMPLATE.md
docs/: frontmatter.md
sample/src/Core/Collectors/: DataCollector.cs  EventBus.cs
sample/src/Infrastructure/Persistence/: OrderRepository.cs
src/codenav/: __main__.py  app.py  frontmatter_check.py  frontmatter_gen.py  hook_install.py  indexer.py  parser_cs.py  search.py  services.py  store.py
tests/: test_app.py  test_frontmatter_check.py  test_frontmatter_gen.py  test_hook_install.py  test_indexer.py  test_main_delete.py  test_parser_cs.py  test_search.py  test_services.py  test_store_manual.py
