[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codenav"
version = "0.1.0"
description = "AI coding-agent tool: semantic class index for C# codebases"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codenav = "codenav.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
